--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
 <body>
 
   
-	<form id="userForm"></form>
+	<form id="userForm" class="user-form"></form>
 
 	<label>Categories:
 		<select name="Categories" id="categoriesList">
