Added shopping cart

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,13 +15,15 @@
   
 	<div id="userFormContainer"></div>
 
-	<label>Categories:
-		<select name="Categories" id="categoriesList">
-			<option selected disabled>Show all</option>
+	<label>
+		<select id="categoriesList">
+			<option selected disabled>Categories:</option>
 		</select>
 	</label>
 
 	<div id="productContainer"></div>
+
+	<div id="cartContainer"></div>
   
 	<script type="module" src="/src/ts/main.ts"></script>
   
