Added order display

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,6 +24,8 @@
 	<div id="productContainer"></div>
 
 	<div id="cartContainer"></div>
+
+	<div id="orderContainer"></div>
   
 	<script type="module" src="/src/ts/main.ts"></script>
   
